increase Eclipse plugin version to 1.17.0